# CloudCostOptimization

./: .gitignore  README.md  ablation_study.py  compare_policies.py  dashboard.py  evaluate_ppo.py  evaluation_baselines.py  export_policy_trace.py  finetune_safety.py  gym_wrapper.py  hyperparameter_sweep.py  main.py  measure_intervention.py  pyproject.toml  report.py  requirements.txt  reward_function.py  state_encoder.py  test_controller.py  test_encoder.py  test_reward.py  train_ppo_final.py  validation.py
cloudsim_validation/: actions.txt  cloudsim_results.csv  compare_validation.py  pom.xml
cloudsim_validation/src/main/java/: StressValidationTest.java  ValidationTest.java
controller/: mcp_controller.py
experiments/: train_no_delta.py  train_no_recovery.py  train_no_robustness.py
logs/: ablation_results.csv  action_trace_logs.csv  ppo_detailed_eval.csv  ppo_evaluation_logs.csv  ppo_summary_stats.csv
policies/: heuristic_policy.py  static_policy.py  threshold_policy.py
simulator/: cloud_env.py  request_queue.py  vm_manager.py
simulator/failures/: failure_engine.py
simulator/network/: bandwidth.py  latency.py
simulator/services/: service_manager.py
simulator/traffic/: anomaly.py  burst.py  normal.py
