[project]
name = "cloud-cost-optimization-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.8.0",
    "torch>=2.11.0",
]
